# ChangeLog for net-firewall/sanewall
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-firewall/sanewall/ChangeLog,v 1.3 2013/08/20 01:10:57 radhermit Exp $

*sanewall-1.1.5 (20 Aug 2013)

  20 Aug 2013; Tim Harder <radhermit@gentoo.org> +sanewall-1.1.5.ebuild:
  Version bump.

*sanewall-1.1.4 (07 Jul 2013)

  07 Jul 2013; Tim Harder <radhermit@gentoo.org> +sanewall-1.1.4.ebuild:
  Version bump.

*sanewall-1.1.3 (15 Jun 2013)

  15 Jun 2013; Tim Harder <radhermit@gentoo.org> +sanewall-1.1.3.ebuild,
  +files/sanewall.confd, +files/sanewall.initd, +metadata.xml:
  Initial import.
