@@ -1,0 +1,12 @@
+DEFINED_PHASES=configure install postinst setup
+DEPEND=app-arch/xz-utils
+DESCRIPTION=iptables firewall generator (fork of firehol)
+EAPI=5
+HOMEPAGE=http://www.sanewall.org/
+KEYWORDS=~amd64 ~x86
+LICENSE=GPL-2+
+RDEPEND=net-firewall/iptables[ipv6] sys-apps/iproute2[-minimal] virtual/modutils || ( net-misc/wget net-misc/curl )
+SLOT=0
+SRC_URI=http://download.sanewall.org/releases/1.1.6/sanewall-1.1.6.tar.xz
+_eclasses_=eutils	4878e7f88afc0ba0866ac112190b0fd4	linux-info	a9cbd6bbe2b28166e403321882f3c73c	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	6601b4c5b3f019a993db59a50e1854e4
+_md5_=bf58129d1b7102ef2bbfc066dcfc109b
