@@ -6,19 +6,21 @@ AUX sanewall.initd 1068 SHA256 b746b42690ba1d808df0d4bdd329af853a3412c89d94b7748
 DIST sanewall-1.1.3.tar.xz 578564 SHA256 c03da8d51401175b3041755ded48d86df7e49e5dcf188029a6faea5809bab3fb SHA512 4613577a8bdd9fcb097f2ff1e74f52f3d6abea118cdcec2960d9ab3a179fb10d59769ed24c125d7e40ef4e635f7342914f34b4cdc8c1ca66161ff833ea3718ad WHIRLPOOL d52f6430a7c059977fff6956117026c2cab1dfd954d778ef906dfe03bd70facb3e14dadcf2e523f7fc0a59971ebb601cabe9dc24bff4a64332fe9270876defd1
 DIST sanewall-1.1.4.tar.xz 584240 SHA256 06d4e134eb8267c3eedf00b7a89b61dc6c71cb0704603f5c3b8bc3f049a77947 SHA512 43051d2240babded55e903cdc039633a5f1092c615cd701a4565770dd52329eb3066fc23e93f377b776243607bc130627acae90d549f02bf4f937260708e27e9 WHIRLPOOL 1b59f58344a219f8764a19f3c59ed6f0b994f49d929777604f9053d6db1c2b3965e2e1fe1d7c75939cb1dea554a409676e58711e900b762ec77d2ae7e8072348
 DIST sanewall-1.1.5.tar.xz 584940 SHA256 062b6300e9713612321349ce190145fde21638f696e229be4ba4018acaa46886 SHA512 1f530585a494cb7c2177ce2bcbd8e186b143cefc0210df26bef1f6d283d7caa0d05b8f0d449795fc21ff5af8ac30a56155e251c1e4c8d2bf92af5292393d017a WHIRLPOOL e5856d9bfae0ffebd9b043d9bca2c10c8841ab567263144e6bd7f5039b6fd84419f89b56e4430406a88240e17f865a8b33bc337b03a7b6e1b8523f3ad0367c66
+DIST sanewall-1.1.6.tar.xz 585316 SHA256 c26a339a1ac945aa0ddffbbb92ac4dff07302da8d9de6983832e91e123c4b00e SHA512 73260197b88816e90b15fc244a5940c290ec99c82eb8e50338b4f0f88710900c8cd18920c6f319205e527859c0696da28798428ab04b03c7f355c1d8ba6f7ca0 WHIRLPOOL cf906c539c4d348837fc93e46e7cf3d1d94cadcd111db918c265fa78133b35befd69ea2bdef782a054b035f40130821291b11965c7846220eaf4551237bcfb78
 EBUILD sanewall-1.1.3.ebuild 1610 SHA256 fc3ae75887854245649e9a08f9c6b4b2273e534ff6133248b3f76ccafe911371 SHA512 f0b209673cbe027eaadd4cb2939736e9b2abb4b7354bd6f9d1c9bb9b7e6bc544586c214367ca0776c57ad5bf1370ee5de11e13be0502a9a120151747568a39b3 WHIRLPOOL c5bf124c79180da7353755c077ce13c427c45af025b1e87d4c23f0ee103cc4d6ae22a89eb2f042b38cb9d9206e65ee7b480bbf03981bd47f3cd1f60f6f1f9e82
 EBUILD sanewall-1.1.4.ebuild 1610 SHA256 e4a8dc8fdcd90a7a725548b222d81d75a9f6b873919bd61322a699e277995fc0 SHA512 9efbbef08a355660a7af7ed11d80ce4d2ebe06b7267857112ad4e84592c93238bafda49dbba706d7d025ae790789d993fb501e9592c6757a5a336f5648d4af53 WHIRLPOOL ee6c2b2501dde2674575ee899f0095425f5ccaa66fb4872087da8e1531a9c38abfb50e3864af66d9d7d4acd0ff31d8bb5a0a550eb767ab7214b04389b6545367
 EBUILD sanewall-1.1.5.ebuild 1610 SHA256 20ce89afe56d140794501a0c78d1b0bb8481ebe083e33a960abc7a05c3a0526e SHA512 c0c2b50f27f59a7c591710b7afebafef1c0ec72bf3358b06d83dc744591fa7615ca038a6b58f9b56ce861808f86d30cc42892281c9921254680d27cafd5ceda6 WHIRLPOOL ab5d75541468ccb821a202055cc49fd2edc5fc8fd9a595ae87cb7c01fd855e2e158a6a7a9b5c963ed42b5294d1b3a40df07ef317534a31dadc3a1b0ecfb6aedf
-MISC ChangeLog 646 SHA256 103bbc015affb90a8e5a37e8281873555789a68634e47c75903f47c7a1db986c SHA512 9e07e7410a4b4d199a61c62f901b9973fbb8dcffea3de68c6baa641c9b2097881dcc43ad66517503520b3192a77180442e1137cdebba85e7eca39d8a0aa6a28e WHIRLPOOL 6f4953e8e4bda37c32425cd5c741a87fd692e67b8a46ed85d5de238df81141b056dffb7675db2c8c540811f6f41e7d9ac598d36d8f9a4ac4badd1682910f1868
+EBUILD sanewall-1.1.6.ebuild 1616 SHA256 f1f00d27652a7a863f369dcf7eae8efd0777cc3ada41eaf15f84b561e33b872d SHA512 3cb664566f7bd8b1560e62006a1fba6134b124356fe5f5f04cde845355d053dcd9aac6bce61a6c199bf7983ca5c65bed72ceb7703f7fbf6cd395636a7a9e91cf WHIRLPOOL be42cf5f0d7b120b934966137d5059a59c8c63da286d3aa75a028bb3567013af38eaf812341a18227ef9eaff5af1f0e31dae9e6156e0c382515097ae1a7388f0
+MISC ChangeLog 823 SHA256 cc2cfbbae8ad554dd868a7d65c3dc20c2af0fb9d28c0ae49a5a504eefb4b59f6 SHA512 19c6dec963e4d13e1a317b618bc20a20323dee4425e6dca29c26ecce2b1d7f93351cf474b86419427f3351871a41ae29f3bbd7b6a00816e594b0d2b5b7764dd9 WHIRLPOOL db9c9626b3ed33cc1cad5db9a9cc86289ea4f6a402b06971838e134aabd8bbe4394e3ae661ffb23ce345ff2b03062b1be8dd0c1f328f2d1ba6d48c2d6d12c548
 MISC metadata.xml 236 SHA256 5285fd5ca6bc85e0392ff64ec8e54d0018ebd761d3977869c00c93dee45ea09d SHA512 a1abf9a60fb1a2078d0475df655f8abd4b2f877f8d232028232fafca2eb7e7ae6ec2c835c4fe0ef27b3b5655d746d1fe53bbcb353703819448ddec84acdd4215 WHIRLPOOL fdbf5fcd34aa17330575f013aef4c87a8b039b62b6de3337a4004a6a0217238ceca43fa15425c30ddb7a5a632de7eb138ed541dfb161614cba817527297781e2
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQEcBAEBCAAGBQJSEsInAAoJEEqz6FtPBkyjlCsH/1JA4u5T6QlsLG0LchUTisTl
-5RkfypBOO6bXm1Qtl+XYE/bPFeRJKB883g6wbXoKrk+d8Vlfap9n2DXu+teQvthA
-JseN4ZK5tcqPdttmfkQCZydI1ILVzuNphxufwVArEtuB1nB4n3KFxy9Fnew3L9A+
-ZJNxlccFtGsvYZBIrBmlBP7HAiEUt3xPXVh4RTx8FNEMhSZzXuUdLV7UTHCkZB5N
-psCsTW37eJdJEwZIorwSHWFwBzhZWs/svYKKe+EbkR9eiXHqYzi23J6WvXSxHmvF
-AZKwT1d41TADmMx8h2W5U4+t2xCrkNmfPhAOth21Z8YIrgOshx/nxznkvP2DG9k=
-=TkbP
+iQEcBAEBCAAGBQJSedryAAoJEEqz6FtPBkyjGJ4H/jaSkOZepW1hz4uiXSpNL0mY
+SrXZvyaukKfR2dwpaLzL3jdHJN/Y2eEJkJLDaZDpouvfGdBGHe/KDC29djFcCQ2Z
+riQybVEn2KR1PEuEMW0d0Zu6haZo6E5L5t8/pLp+apRrRngGAd5hz/umA6sBjhew
+FxZbgg3IrUsQV4mKRVn4isvpisOya9TojZVYizAaz0z+1trbTe1OtvDaeHklSxoG
+sHHHZTPDGMsImCpAHQgG1c/3pdzZWx0ExESnc63dgNgSDiZniXasM8/YVzDWcm3C
+p6jv8TCxU9rqzbb3E32jxr8ggaAQ18qjKb1Fx4HhVhsFLHCb+sqejySYe3JgCxM=
+=Fdeq
 -----END PGP SIGNATURE-----
