@@ -1,6 +1,11 @@
 # ChangeLog for net-firewall/sanewall
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-firewall/sanewall/ChangeLog,v 1.3 2013/08/20 01:10:57 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-firewall/sanewall/ChangeLog,v 1.4 2013/11/06 06:00:14 radhermit Exp $
+
+*sanewall-1.1.6 (06 Nov 2013)
+
+  06 Nov 2013; Tim Harder <radhermit@gentoo.org> +sanewall-1.1.6.ebuild:
+  Version bump, dep on net-firewall/iptables[ipv6] (fixes bug #485670).
 
 *sanewall-1.1.5 (20 Aug 2013)
 
